<resources>
    <string name="app_name">HBM</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ActionbarUsuario">Juan Carlos Trujillo</string>
    <string name="ActionbarCargo">Ejecutivo de ventas</string>
    <string name="action_add">Buscar</string>
    <string name="action_notification">Notificacion</string>
    <string name="action_search">Buscar</string>
    <string name="action_help">Ayuda</string>
    <string name="action_about">Acerca de</string>
</resources>
